# seestarpy-utils

./: README.md  pyproject.toml
mobile_app/: README.md  buildozer.spec  main_chatgpt.py  main_claude.py
src/seestarpy_utils/: crowdsky.py  rtsp_client.py
src/seestarpy_utils/old_code/: stacking_benchmark.py  stacking_old.py
src/seestarpy_utils/stacking/: __init__.py  file_selection_utils.py  fits_header_utils.py  stacking.py
