[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seestarpy-utils"
version = "0.1.0"
authors = [ { name = "Kieran Leschinski", email = "kdleschinski@gmail.com" },]
description = "Utility functions for Seestar telescope data processing (stacking, file management, etc.)"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "opencv-python",
    "astropy",
    "astroalign",
    "sep>=1.4.0",
    "Pillow",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.urls]
"Homepage" = "https://github.com/astronomyk/seestarpy-utils"
"Bug Tracker" = "https://github.com/astronomyk/seestarpy-utils/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/seestarpy_utils"]
